--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>crud</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>crud</name>
-    <description>Spring Boot Crud Operation H2</description>
+    <description>Spring Boot Crud Operation Couchbase</description>
     <properties>
         <java.version>11</java.version>
     </properties>
